// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Agent template rendering snapshots > Aider (aider) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Aider (aider) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Claude Code (claude-code) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Claude Code (claude-code) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > CodeBuddy (codebuddy) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > CodeBuddy (codebuddy) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Codex (codex) > renders SSE MCP snapshot 1`] = `
"[mcp_servers.remote-server]
url = "http://localhost:3000/sse"
env = { API_KEY = "API_KEY" }
"
`;

exports[`Agent template rendering snapshots > Codex (codex) > renders stdio MCP snapshot 1`] = `
"[mcp_servers.filesystem]
command = "npx"
args = ["-y", "@modelcontextprotocol/server-filesystem", "/tmp"]
env = { GITHUB_TOKEN = "GITHUB_TOKEN" }
"
`;

exports[`Agent template rendering snapshots > Cursor (cursor) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Cursor (cursor) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Droid (droid) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Droid (droid) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Factory (factory) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Factory (factory) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Gemini CLI (gemini-cli) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Gemini CLI (gemini-cli) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Hermes (hermes) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Hermes (hermes) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > OpenClaude (openclaude) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > OpenClaude (openclaude) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > OpenCode (opencode) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > OpenCode (opencode) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Qoder (qoder) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Qoder (qoder) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Qoder CN (qoder-cn) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Qoder CN (qoder-cn) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Qwen Code (qwen-code) > renders SSE MCP snapshot 1`] = `
"{
  "mcpServers": {
    "remote-server": {
      "url": "http://localhost:3000/sse",
      "env": {
        "API_KEY": "\${env:API_KEY}"
      }
    }
  }
}
"
`;

exports[`Agent template rendering snapshots > Qwen Code (qwen-code) > renders stdio MCP snapshot 1`] = `
"{
  "mcpServers": {
    "filesystem": {
      "command": "npx",
      "args": [
        "-y",
        "@modelcontextprotocol/server-filesystem",
        "/tmp"
      ],
      "env": {
        "GITHUB_TOKEN": "\${env:GITHUB_TOKEN}"
      }
    }
  }
}
"
`;
